layout for the collab show done. deleted useless css code in components and useless icons. added a collab descriptipn in the new collab form.

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -113,3 +113,13 @@
   }
 }
 
+.container-btn-collab {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+
+  .btn-outline-primary {
+    width: 15%;
+  }
+}
+
