--- a/app/assets/stylesheets/components/_to_do_card.scss
+++ b/app/assets/stylesheets/components/_to_do_card.scss
@@ -1,7 +1,13 @@
 .card-to-do {
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 30vw;
-  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  width: 400px;
+
+  h3 {
+    margin: 8px;
+  }
+
+  ul {
+    margin-bottom: 0;
+  }
 }
