--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -91,3 +91,44 @@
   border-color: black;
   margin: 0 75px;
 }
+
+.container {
+
+  .collab-list-infos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    h3 {
+      margin-bottom: 0;
+      width: 300px;
+
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+    }
+
+    h4 {
+      margin-bottom: 0;
+      width: 300px;
+    }
+
+    p {
+      margin-bottom: 0;
+      width: 300px;
+      text-align: center;
+    }
+
+    .btn-collab-view {
+      text-align: center;
+      width: 300px;
+
+      .btn-outline-primary {
+        margin-bottom: 0;
+        width: 50%
+      }
+    }
+  }
+}
