--- a/app/assets/stylesheets/components/_profile-card.scss
+++ b/app/assets/stylesheets/components/_profile-card.scss
@@ -17,6 +17,11 @@
     width: 400px;
     text-align: justify;
 
+    a {
+      text-decoration: none;
+      color: black;
+    }
+
     p {
       margin-bottom: 8px;
     }
