--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,9 +28,7 @@
           <p>Biography</p>
           <p><%= @user.description  %></p>
           <hr>
-          <p><%= link_to 'See my exhibitions', exhibitions_path(query: @user.id) %></p>
-          <hr>
-          <p>Want to collab? Send a message!</p>
+          <h4><%= link_to 'See my exhibitions', exhibitions_path(query: @user.id) %></h4>
           <br>
         </div>
         <% if current_user == @user  %>
