--- a/app/views/collabs/_form-collab.html.erb
+++ b/app/views/collabs/_form-collab.html.erb
@@ -1,12 +1,19 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
-      <%= simple_form_for @collab do |f| %>
-        <%= f.input :name %>
-        <%= f.input :description %>
-        <%= f.input :photo, as: :file %>
-        <%= f.button :submit, class:"btn btn-primary" %>
-      <% end %>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-4">
+      <div class="form-login gradient-border">
+        <h2>Create a new collab</h2>
+        <%= simple_form_for @collab do |f| %>
+          <div class="form-inputs">
+            <%= f.input :name %>
+            <%= f.input :description %>
+            <%= f.input :photo, as: :file %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Let's Collab!", class: "btn btn-outline-primary" %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
