--- a/app/views/to_do_items/new.html.erb
+++ b/app/views/to_do_items/new.html.erb
@@ -1,10 +1,17 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
-      <%= simple_form_for [@to_do, @to_do_item] do |f| %>
-        <%= f.input :content %>
-        <%= f.button :submit, class:"btn btn-primary" %>
-      <% end %>
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+      <div class="form-login gradient-border">
+        <h2>Add a to-do item</h2>
+        <%= simple_form_for [@to_do, @to_do_item] do |f| %>
+          <div class="form-inputs">
+            <%= f.input :content %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Add this item", class: "btn btn-outline-primary" %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
