--- a/app/views/work_of_arts/edit.html.erb
+++ b/app/views/work_of_arts/edit.html.erb
@@ -1,12 +1,22 @@
 <div class="container">
-  <%= simple_form_for @work_of_art do |f| %>
-    <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :art_type, collection: @work_of_art.set_art_types %>
-    <%= f.input :creation_date, as: :date %>
-    <%= f.input :photo, as: :file %>
-    <%= f.input_field :user, as: :hidden, value: current_user %>
-    <%= f.button :submit, class:"btn btn-primary" %>
-
-  <% end %>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-4">
+      <div class="form-login gradient-border">
+      <h2>Edit my artwork</h2>
+        <%= simple_form_for @work_of_art do |f| %>
+        <div class="form-inputs">
+          <%= f.input :name %>
+          <%= f.input :description %>
+          <%= f.input :art_type, collection: @work_of_art.set_art_types %>
+          <%= f.input :creation_date, as: :date %>
+          <%= f.input :photo, as: :file %>
+          <%= f.input_field :user, as: :hidden, value: current_user %>
+        </div>
+        <div class="form-actions">
+          <%= f.button :submit, "Edit my artwork", class: "btn btn-outline-primary" %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
