moved the position of the dropdown menu and removed the ugly hover effect

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -32,4 +32,14 @@
     text-decoration: underline;
     text-underline-position: under;
   }
+
+  .dropdown-menu {
+    position: relative;
+    top: 57px;
+    right: -1px;
+  }
+
+  .dropdown-menu a:hover {
+    background: white;
+  }
 }
