--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,12 +38,12 @@
           <li class="nav-item dropdown">
             <%= image_tag "account-logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "My Profile", user_path(current_user), class: "dropdown-item nav-link" %>
-              <%= link_to "Messages", "#", class: "nav-link" %>
-              <%= link_to "My Art", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
+              <%= link_to "My profile", user_path(current_user), class: "dropdown-item nav-link" %>
+              <%= link_to "My messages", "#", class: "nav-link" %>
+              <%= link_to "My artworks", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "My favorites", myfavorites_path, class: "dropdown-item nav-link" %>
-              <%= link_to "My Collabs", user_collab_relationships_path, class: "dropdown-item nav-link" %>
-              <%= link_to "My Exhibitions", exhibitions_path(query: 'my_exhibitions'), class: "dropdown-item nav-link" %>
+              <%= link_to "My collabs", user_collab_relationships_path, class: "dropdown-item nav-link" %>
+              <%= link_to "My exhibitions", exhibitions_path(query: 'my_exhibitions'), class: "dropdown-item nav-link" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item nav-link" %>
             </div>
           </li>
