--- a/app/views/user_collab_relationships/new.html.erb
+++ b/app/views/user_collab_relationships/new.html.erb
@@ -12,7 +12,8 @@
         <div class="form-actions">
         <%= f.button :submit, 'Add this member', class: "btn btn-outline-primary" %>
         </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
