--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -53,4 +53,8 @@
     -webkit-transition: .2s ease-in-out;
     transition: .2s ease-in-out;
   }
+
+  #image-woa-show {
+    pointer-events: none;
+  }
 }
