--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,9 @@
 <div class="<%= page_background_class %>">
   <% if @users.empty? %>
-      <div class="container-artist-cards">
-        <h2> Well.. we didn't find anything for "<%= params[:search][:name] %>" </h2>
-      </div>
+  <br>
+  <div class="container-artist-cards">
+    <h2 id="no-result"> Sorry, we didn't find anything for "<%= params[:search][:name] %>" </h2>
+  </div>
   <% end %>
   <div class="container-artist-cards">
     <% @users.each do |user| %>
