made accept works

--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -41,6 +41,7 @@
     <%= link_to "Back to Collabs", collabs_path %>
     <% else %>
     <h2>Your request is pending !</h2>
+      <%= link_to "Back to Collabs", collabs_path %>
     <% end %>
   </div>
 </div>
