--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -14,15 +14,18 @@
       <% end %>
       </div>
       <hr class="divider">
-      <div>
-        <% @collabs_to_accept.each do |cr| %>
+  <% end %>
+  </div>
+  <div class="container">
+    <% @collabs_to_accept.each do |cr| %>
+        <div>
           <%= cr.collab.name %>
           <%= link_to cr.user.username, user_path(cr.user) %>
-          <%= link_to "Accept this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}, method: :patch, class: 'btn btn-outline-primary' %>
-          <%= link_to "Reject this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"},method: :patch, class: 'btn btn-outline-primary' %>
-        <% end %>
-      </div>
-  <% end %>
+          <%= link_to "Accept this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}, method: :patch, class: 'btn-outline-warning' %>
+          <%= link_to "Reject this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"}, method: :patch, class: 'btn-outline-warning' %>
+          <hr class="divider">
+        </div>
+     <% end %>
   </div>
   <br>
   <br>
