--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -2,6 +2,10 @@
   background-color: transparent;
 }
 
+.background_yellow {
+  background-color: #fff5c0;
+}
+
 .background_blue {
   background-color: #dee8eb;
 }
