--- a/app/views/work_of_arts/toggle_favorite.js.erb
+++ b/app/views/work_of_arts/toggle_favorite.js.erb
@@ -1,7 +1,7 @@
 var work_of_artId = '<%= @work_of_art.id %>'
 
 function toggleLikeButton(work_of_artId) {
-    let likeButton = document.querySelector(`.favorite-icon[data-id='${work_of_artId}']`)
-    likeButton.classList.toggle('red');
+    let likeButton = document.querySelector(`.favorite-heart[data-id='${work_of_artId}']`)
+    likeButton.classList.toggle('favorited');
   }
   toggleLikeButton(work_of_artId);
