--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -2,23 +2,28 @@
 
   <div class="container">
   <br>
-    <% @user_collab_relationships.each do |user_collab_relationship| %>
     <div class=collab-list-infos>
-      <% if user_collab_relationship.accepted? %>
-        <h3> <%= link_to user_collab_relationship.collab.name, collab_path(user_collab_relationship.collab_id) %> </h3>
-        <h4> <%= user_collab_relationship.collab.description %> </h4>
-        <div class="btn-collab-view">
-          <%= link_to "View this collab", collab_path(user_collab_relationship.collab_id), class: 'btn btn-outline-primary' %>
-        </div>
-      <% elsif user_collab_relationship.pending? %>
-        <h3> <%= user_collab_relationship.collab.name %> </h3>
-        <h4> <%= user_collab_relationship.collab.description %> </h4>
-        <p>Your request has not been accepted yet!</p>
+      <% @user_collab_relationships.each do |user_collab_relationship| %>
+        <% if user_collab_relationship.accepted? %>
+          <h3> <%= link_to user_collab_relationship.collab.name, collab_path(user_collab_relationship.collab_id) %> </h3>
+          <h4> <%= user_collab_relationship.collab.description %> </h4>
+          <div class="btn-collab-view">
+            <%= link_to "View this collab", collab_path(user_collab_relationship.collab_id), class: 'btn btn-outline-primary' %>
+          </div>
+        <% elsif user_collab_relationship.pending? %>
+          <h3> <%= user_collab_relationship.collab.name %> </h3>
+          <h4> <%= user_collab_relationship.collab.description %> </h4>
+          <p>Your request has not been accepted yet!</p>
+        <% end %>
       <% end %>
+    </div>
+    <hr class="divider">
+
+    <div class=collab-list-infos >
       <% @collabs_to_accept.each do |cr| %>
           <div>
-            <%= cr.collab.name %>
-            <%= link_to cr.user.username, user_path(cr.user) %>
+            <h3><%= cr.collab.name %></h3>
+            <h4><%= link_to cr.user.username, user_path(cr.user) %></h4>
             <div btn-collab-view>
             <%= link_to "Accept this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}, method: :patch, class: 'btn btn-outline-success' %>
             <%= link_to "Reject this collab", user_collab_relationship_path(cr), user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"}, method: :patch, class: 'btn btn-outline-warning' %>
@@ -27,9 +32,10 @@
           </div>
        <% end %>
 
-    <hr class="divider">
-    <% end %>
-        </div>
+    </div>
+
+
+
   </div>
     <br>
     <br>
