fixed the navbar color for the forms and added background color for 'my favorite' and 'my artwork'. added 'date of creation' when add/edit an artwork. removed unecessary link_to in my profile

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,6 +10,18 @@
     <a href="https://github.com/lewagon" target="blank" rel="noopener noreferrer">
       <i class="fab fa-github fa-2x"></i>
     </a>
+
+    <a href="https://www.facebook.com/lewagonbrussels/" target="blank" rel="noopener noreferrer">
+      <i class="fab fa-facebook fa-2x"></i>
+    </a>
+
+    <a href="https://www.instagram.com/lewagonbelgium" target="blank" rel="noopener noreferrer">
+      <i class="fab fa-instagram fa-2x"></i>
+    </a>
+
+    <a href="https://twitter.com/lewagonbrussels" target="blank" rel="noopener noreferrer">
+      <i class="fab fa-twitter fa-2x"></i>
+    </a>
   </div>
 
 </div>
