--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <% if @user.photo.attached? %>
         <%= image_tag @user.photo, crop: :fill %>
       <% else %>
-        <%= link_to image_tag("artist.png") %>
+        <%= image_tag("artist.png") %>
       <% end %>
       <div class="profile-card-items">
         <div class="profile-card-infos">
