--- a/app/views/work_of_arts/_form-work_of_art.html.erb
+++ b/app/views/work_of_arts/_form-work_of_art.html.erb
@@ -7,7 +7,8 @@
           <div class="form-inputs">
             <%= f.input :name %>
             <%= f.input :description %>
-            <%= f.input :art_type, collection: @work_of_art.set_art_types %>
+            <%= f.input :art_type, collection: @work_of_art.set_art_types, label: "Category" %>
+            <%= f.input :creation_date, as: :date, start_year: Date.today.year - 50, end_year: Date.today.year, discard_day:true, discard_month:true, label: "Date of creation" %>
             <%= f.input :photo, as: :file %>
           </div>
           <div class="form-actions">
