--- a/app/views/work_of_arts/edit.html.erb
+++ b/app/views/work_of_arts/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-4">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login gradient-border">
       <h2>Edit my artwork</h2>
         <%= simple_form_for @work_of_art do |f| %>
         <div class="form-inputs">
           <%= f.input :name %>
           <%= f.input :description %>
-          <%= f.input :art_type, collection: @work_of_art.set_art_types %>
-          <%= f.input :creation_date, as: :date %>
+          <%= f.input :art_type, collection: @work_of_art.set_art_types, label: "Category" %>
+          <%= f.input :creation_date, as: :date, start_year: Date.today.year - 50, end_year: Date.today.year, discard_day:true, discard_month:true, label: "Date of creation" %>
           <%= f.input :photo, as: :file %>
           <%= f.input_field :user, as: :hidden, value: current_user %>
         </div>
@@ -19,4 +19,5 @@
       </div>
     </div>
   </div>
+  <br>
 </div>
