--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="links">
-    <a href="https://github.com/lewagon" target="blank" rel="noopener noreferrer">
+    <a href="https://github.com/AlexandreDidion/Artsouille" target="blank" rel="noopener noreferrer">
       <i class="fab fa-github fa-2x"></i>
     </a>
 
