--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -87,12 +87,28 @@
   }
 }
 
+.collab-accepted-users {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+
+  .container-btn-collab {
+    margin-top: 30px;
+    padding: 4px 10px;
+  }
+}
+
+
 .collab-divider {
   border-color: black;
   margin: 0 75px;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .collab-list-infos {
     display: flex;
@@ -131,4 +147,19 @@
       }
     }
   }
+
+  .collab-pending-users {
+    padding: 6px 12px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    width: 400px;
+    background-color: white;
+
+    h2 {
+      margin-bottom: 0;
+      width: 300px;
+      text-align: center;
+    }
+  }
+
 }
