--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -98,6 +98,30 @@
   text-shadow: 1px 1px 2px #f79533;
 }
 
+.btn-outline-success {
+  font-family: "Novar";
+  width: 100%;
+  margin-bottom: 20px;
+  border-color: #158467;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: #158467;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-outline-success:hover {
+  color: white;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  border-color: #158467;
+  text-shadow: 1px 1px 2px #158467;
+}
+
 .btn-arrow-left {
   margin-left: 75px;
   width: 15%;
