--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -107,8 +107,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
   .collab-list-infos {
     display: flex;
@@ -139,7 +137,7 @@
 
     .btn-collab-view {
       text-align: center;
-      width: 300px;
+      width: 200px;
 
       .btn-outline-primary {
         margin-bottom: 0;
@@ -147,6 +145,62 @@
       }
     }
   }
+
+  .collab-request {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .collab-request-infos {
+      display: flex;
+      flex-direction: row;
+
+      h3 {
+        margin-bottom: 0;
+        width: 300px;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+      }
+
+      h4 {
+        margin-bottom: 0;
+        width: 300px;
+      }
+
+      p {
+        margin-bottom: 0;
+        width: 300px;
+        text-align: center;
+      }
+    }
+
+    .btn-collab-validation {
+      text-align: center;
+      display: flex;
+      justify-content: space-around;
+
+      .btn-reject {
+        width: 40%;
+        margin-bottom: 0;
+      }
+
+      .btn-accept {
+        width: 40%;
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.container-pending {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .collab-pending-users {
     padding: 6px 12px;
@@ -161,5 +215,4 @@
       text-align: center;
     }
   }
-
 }
