--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -20,6 +20,7 @@
   <br>
 
   <% if @accepted_users %>
+
     <div class="collab-accepted-users">
       <div class="collab-card-members-todo">
         <div class="collab-card-info">
@@ -55,19 +56,24 @@
             </ul>
           <% end %>
         </div>
+
       </div>
+
       <div class="container-btn-collab">
         <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab), class: "btn btn-outline-primary" %>
         <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition), class: "btn btn-outline-primary" %>
         <%= link_to "Add a brainstorming", new_collab_to_do_path(@collab), class: "btn btn-outline-primary" %>
       </div>
     </div>
+
   <% else %>
-  <div class="container">
+
+  <div class="container-pending">
     <div class="collab-pending-users">
       <h2>Your request is pending !</h2>
     </div>
   </div>
+
   <% end %>
   <br>
 </div>
