--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -2,9 +2,8 @@
 
   <div class="container">
     <br>
-    <div class=collab-list-infos>
-      <% @user_collab_relationships.each do |user_collab_relationship| %>
-
+    <% @user_collab_relationships.each do |user_collab_relationship| %>
+      <div class= "collab-list-infos">
         <% if user_collab_relationship.accepted? %>
           <h3> <%= link_to user_collab_relationship.collab.name, collab_path(user_collab_relationship.collab_id) %> </h3>
           <h4> <%= user_collab_relationship.collab.description %> </h4>
@@ -17,23 +16,25 @@
           <h4> <%= user_collab_relationship.collab.description %> </h4>
           <p>Your request has not been accepted yet!</p>
         <% end %>
-      <% end %>
-    </div>
+      </div>
     <hr class="divider">
+    <% end %>
+    <br>
 
-    <div class=collab-list-infos >
-      <% @collabs_to_accept.each do |cr| %>
-        <div>
+    <% @collabs_to_accept.each do |cr| %>
+      <div class="collab-request">
+        <div class="collab-request-infos">
           <h3><%= cr.collab.name %></h3>
+          <h4><%= cr.collab.description %> </h4>
           <h4><%= link_to cr.user.username, user_path(cr.user) %></h4>
-          <div btn-collab-view>
-            <%= link_to "Accept this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}), method: :patch, class: 'btn btn-outline-success' %>
-            <%= link_to "Reject this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"}), method: :patch, class: 'btn btn-outline-warning' %>
-          </div>
-          <hr class="divider">
         </div>
-      <% end %>
-    </div>
+        <div class="btn-collab-validation">
+          <%= link_to "Accept this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}), method: :patch, class: 'btn btn-outline-success btn-accept' %>
+          <%= link_to "Reject this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"}), method: :patch, class: 'btn btn-outline-warning btn-reject' %>
+        </div>
+      </div>
+      <hr class="divider">
+    <% end %>
   </div>
   <br>
   <br>
@@ -42,28 +43,3 @@
   <br>
   <br>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
