--- a/app/views/to_dos/_form_to_do.html.erb
+++ b/app/views/to_dos/_form_to_do.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login gradient-border">
-        <h2>Add a to-do list</h2>
+        <h2>Add a Brainstorm table</h2>
         <%= simple_form_for [@collab, @to_do] do |f| %>
           <div class="form-inputs">
             <%= f.input :title %>
           </div>
           <div class="form-actions">
-            <%= f.button :submit, "Add this to-do", class: "btn btn-outline-primary" %>
+            <%= f.button :submit, "Brainstorm!", class: "btn btn-outline-primary" %>
           </div>
         <% end %>
       </div>
