--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -7,6 +7,7 @@
         <% if user_collab_relationship.accepted? %>
           <h3> <%= link_to user_collab_relationship.collab.name, collab_path(user_collab_relationship.collab_id) %> </h3>
           <h4> <%= user_collab_relationship.collab.description %> </h4>
+          <p class="founder">by <u><%= link_to user_collab_relationship.user.username, user_path(user_collab_relationship.user) %></u> </p>
           <div class="btn-collab-view">
             <%= link_to "View this collab", collab_path(user_collab_relationship.collab_id), class: 'btn btn-outline-primary' %>
           </div>
@@ -14,20 +15,18 @@
         <% elsif user_collab_relationship.pending? %>
           <h3> <%= user_collab_relationship.collab.name %> </h3>
           <h4> <%= user_collab_relationship.collab.description %> </h4>
-          <p>Your request has not been accepted yet!</p>
+          <p class="founder">by <u><%= link_to user_collab_relationship.user.username, user_path(user_collab_relationship.user) %></u> </p>
+          <p class="request-not-accepted-yet">Your request has not been accepted yet!</p>
         <% end %>
       </div>
     <hr class="divider">
     <% end %>
-    <br>
 
     <% @collabs_to_accept.each do |cr| %>
-      <div class="collab-request">
-        <div class="collab-request-infos">
-          <h3><%= cr.collab.name %></h3>
-          <h4><%= cr.collab.description %> </h4>
-          <h4><%= link_to cr.user.username, user_path(cr.user) %></h4>
-        </div>
+      <div class="collab-request-infos">
+        <h3> <%= link_to cr.collab.name, collab_path(cr.collab_id) %> </h3>
+        <h4> <%= cr.collab.description %> </h4>
+        <p class="founder">by <u><%= link_to cr.user.username, user_path(cr.user) %></u> </p>
         <div class="btn-collab-validation">
           <%= link_to "Accept this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "accepted"}), method: :patch, class: 'btn btn-outline-success btn-accept' %>
           <%= link_to "Reject this collab", user_collab_relationship_path(cr, user_collab_relationship: {collab_id: cr.collab.id , user_id: cr.user.id, status: "rejected"}), method: :patch, class: 'btn btn-outline-warning btn-reject' %>
@@ -36,10 +35,6 @@
       <hr class="divider">
     <% end %>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
   <br>
   <br>
 </div>
