--- a/app/views/collabs/_form-collab.html.erb
+++ b/app/views/collabs/_form-collab.html.erb
@@ -11,6 +11,7 @@
           </div>
           <div class="form-actions">
             <%= f.button :submit, "Let's Collab!", class: "btn btn-outline-primary" %>
+            <%= link_to "Cancel", :back, class: "btn btn-outline-warning" %>
           </div>
         <% end %>
       </div>
