--- a/app/views/exhibitions/_form-exhibition.html.erb
+++ b/app/views/exhibitions/_form-exhibition.html.erb
@@ -17,6 +17,7 @@
           </div>
           <div class="form-actions">
             <%= f.button :submit, "Let's Exhibit!", class: "btn btn-outline-primary" %>
+            <%= link_to "Cancel", :back, class: "btn btn-outline-warning" %>
           </div>
         </div>
       <% end %>
