--- a/app/views/to_dos/_form_to_do.html.erb
+++ b/app/views/to_dos/_form_to_do.html.erb
@@ -9,6 +9,7 @@
           </div>
           <div class="form-actions">
             <%= f.button :submit, "Brainstorm!", class: "btn btn-outline-primary" %>
+            <%= link_to "Cancel", :back, class: "btn btn-outline-warning" %>
           </div>
         <% end %>
       </div>
