--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
 
   <div class="text-footer">
-    <p>This website was coded with<span>  ❤️</span>at Le Wagon by Artsouille Team.
+    <p>This website was coded with<span> <i class="fas fa-heart"></i> </span>at Le Wagon by Artsouille Team.
     <br>
     Copyright 2021 Artsouille, Inc. All rights reserved</p>
   </div>
