--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,28 +9,109 @@
   bottom: 0;
   width: 100%;
 
-  .text-footer {
-    margin-bottom: 10px;
-
-    p {
-      font-size: 18px;
-      margin-bottom: 0;
-    }
+  .links {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: -30px;
   }
 
-  .links {
+  .links ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
 
-    a {
-      color: black;
-      text-decoration: none;
+   .links a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .links ul li {
+    width: 40px;
+    height: 40px;
+    line-height: 36px;
+    margin: 0 10px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 2px solid black;
+    float: left;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li .fa {
+    color: black;
+    margin-top: 20px;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover.facebook {
+    border: 2px solid #3b5998;
+    box-shadow: 0 0 15px #3b5998;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover .fa-facebook-f {
+    color: #3b5998;
+    text-shadow: 0 0 15px #3b5998;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover.twitter {
+    border: 2px solid #00aced;
+    box-shadow: 0 0 15px #00aced;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover .fa-twitter {
+    color: #00aced;
+    text-shadow: 0 0 15px #00aced;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover.instagram {
+    border: 2px solid #bc2a8d;
+    box-shadow: 0 0 15px #bc2a8d;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover .fa-instagram {
+    color: #bc2a8d;
+    text-shadow: 0 0 15px #bc2a8d;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover.github {
+    border: 2px solid black;
+    box-shadow: 0 0 15px black;
+    transition: all 0.5s ease;
+  }
+
+  .links ul li:hover.fa-github-square {
+    color: black;
+    text-shadow: 0 0 15px black;
+    transition: all 0.5s ease;
+  }
+
+  .footer-bottom {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    background: black;
+    width: 100%;
+
+    p {
+      margin: 8px 0;
+      color: white;
+      font-size: 14px;
+      word-spacing: 2px;
     }
 
-    a:hover {
-      text-decoration:none;
-    }
-
-    i {
-      padding: 0px 10px;
+    span {
+        text-transform: uppercase;
+        opacity: 0.7;
     }
   }
 }
