--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -72,7 +72,7 @@
   .links ul li:hover.instagram {
     border: 2px solid #bc2a8d;
     box-shadow: 0 0 15px #bc2a8d;
-    transition: 0.5s all ease;
+    transition: all 0.5s ease;
   }
 
   .links ul li:hover .fa-instagram {
