--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="banner">
   <div class="row">
     <div class="col">
-      <h1>Creativity takes courage.</h1>
-      <h3>Join us now, display your art and find other artists like you</h3>
+      <h1>Artsouille</h1>
+      <h3>Find another artist, collab, co-create</h3>
+      <h3>Because art is too important not to be shared</h3>
         <div class="btn-apply">
-          <%= link_to new_user_registration_path do %> 
+          <%= link_to new_user_registration_path do %>
             <h6 class="btn-join-now">Join us</h6>
           <% end %>
         </div>
