--- a/app/assets/stylesheets/components/_profile-card.scss
+++ b/app/assets/stylesheets/components/_profile-card.scss
@@ -25,5 +25,11 @@
     p {
       margin-bottom: 8px;
     }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
   }
 }
