--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -25,6 +25,7 @@
       <div class="collab-card-members-todo">
         <div class="collab-card-info">
           <h3><%= @collab.name %></h3>
+          <%= link_to 'Edit', edit_collab_path(@collab), class: "btn btn-outline-primary" %>
           <hr>
           <h4><%= @collab.description %></h4>
           <hr>
