--- a/app/assets/stylesheets/components/_profile-card.scss
+++ b/app/assets/stylesheets/components/_profile-card.scss
@@ -3,8 +3,10 @@
   justify-content: space-evenly;
 
   img {
-    max-width: 400px;
-    max-height: 600px;
+    max-width: 600px;
+    max-height: 500px;
+    width: auto;
+    height: auto;
   }
 }
 
