--- a/app/views/collabs/index.html.erb
+++ b/app/views/collabs/index.html.erb
@@ -8,7 +8,7 @@
       <br>
       <br>
       If you are interested in a collaboration you can either create a new group
-      or send a message to an existing one.
+      or send a request to an existing one.
       <br>
       <br>
       Let's make something beautiful together!
@@ -27,12 +27,19 @@
         <% else %>
           <%= image_tag('artist_2.png') %>
         <% end %>
+
         <div class="collab-card-infos">
-          <h3><%= collab.name %></h3>
+          <% if collab.users.include? current_user %>
+           <h3><%= link_to collab.name, collab_path(collab.id) %></h3>
+            <% else %>
+             <h3><%= collab.name %></h3>
+          <% end %>
           <h4><%= collab.description %></h4>
-          <div class="btn-collab-card">
-            <%= link_to "Join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
-          </div>
+          <% unless collab.users.include? current_user  %>
+            <div class="btn-collab-card">
+              <%= link_to "Ask to join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
